--- a/promo_site_frontend/index.html
+++ b/promo_site_frontend/index.html
@@ -17,7 +17,9 @@
         </div>
         <div class="header_right">
             <div class="header_btn">
+                <a href="#git">
                 <i class="fa-solid fa-chevron-down"></i>
+                </a>
             </div>
         </div>
     </header>
@@ -36,11 +38,13 @@
                 </div>
             </div>
         </section>
-        <section class="projects">
+        <section id="git" class="projects">
             <h1>Проекты</h1>
             <div class="section_row">
                 <div class="section_item github">
-                    <img src="github_logo.png" alt="">
+                    <a href="https://github.com/Oleg-1734">
+                    <img src="github_logo.png" alt="Картинка GitHub">
+                    </a>
                 </div>
             </div>
         </section>
@@ -48,20 +52,26 @@
             <h1>Контакты</h1>
             <div class="section_row">
                 <div class="section_item">
+                    <a href="https://vk.com/warthunder">
                     <img src="vk_logo.png" alt="">
+                    </a>
                 </div>
                 <div class="section_item">
+                    <a href="https://t.me/s/warthunderru">
                     <img src="tg_logo.svg" alt="">
+                    </a>
                 </div>
                 <div class="section_item">
+                    <a href="https://wiki.warthunder.ru/Sturer_Emil">
                     <img src="email_logo.png" alt="">
+                    </a>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="footer_content">
-            Создано мной в 2023 | Алгоритмика
+            Создано мной в 2024 под тяжёлыми веществами
         </div>
     </footer>
 </body>
